hphp/hack/test/typecheck/reactive/test_freeze3.php.exp
File "test_freeze3.php", line 13, characters 3-12:
Invalid argument - freeze() takes a single mutable variable (Typing[4211])
File "test_freeze3.php", line 13, characters 10-11:
This variable is immutable
